--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,7 @@ build_flags =
     -DENABLE_HWSERIAL2
     -DPIN_SERIAL2_RX=PA3
     -DPIN_SERIAL2_TX=PA2
+    ; RX PORT
+    -DENABLE_HWSERIAL3
+    -DPIN_SERIAL3_RX=PB9
+    -DPIN_SERIAL3_TX=PB8
