Цей platformio теж мене трохи напружує.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,11 +10,24 @@ board_build.mcu = stm32g070kbt6
 upload_protocol = stlink
 
 build_flags =
-    ; DEBUG PORT
+    ; DEBUG PORT (UART2)
     -DENABLE_HWSERIAL2
     -DPIN_SERIAL2_RX=PA3
     -DPIN_SERIAL2_TX=PA2
-    ; RX PORT
+    ; RX PORT (UART3)
     -DENABLE_HWSERIAL3
     -DPIN_SERIAL3_RX=PB9
     -DPIN_SERIAL3_TX=PB8
+    ; GPS PORT (UART1)
+    -DENABLE_HWSERIAL1
+    -DPIN_SERIAL1_RX=PA10
+    -DPIN_SERIAL1_TX=PA9
+    ; VTX PORT (UART4)
+    -DENABLE_HWSERIAL4
+    -DPIN_SERIAL4_TX=PA0
+    ; Disable Serial for debug
+    -DNDEBUG
+    -DHWSERIAL_NONE
+
+# Я не впевнен шо для коректної роботи Half-duplex, потрібно включати ENABLE_HWSERIAL4
+# Можливо треба вручну зробити це у програмі
