--- a/zephyrproject/army-simple-fc/boards/dropla/army_simple_fc_v1_0/army_simple_fc_v1_0.dts
+++ b/zephyrproject/army-simple-fc/boards/dropla/army_simple_fc_v1_0/army_simple_fc_v1_0.dts
@@ -12,8 +12,8 @@
 
 / {
 	model = "DROPLA Army simple flight controller board";
-	//compatible = "st,stm32g070rb-nucleo";
-	compatible = "dropla,army-simple-fc";
+	compatible = "st,stm32g070rb-nucleo";
+	//compatible = "dropla,army-simple-fc";
 
 	chosen {
 		zephyr,console = &usart2;
@@ -74,7 +74,7 @@
 };
 
 &usart1 {
-	pinctrl-0 = <&usart1_tx_pc4 &usart1_rx_pc5>;
+	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	pinctrl-names = "default";
 	current-speed = <115200>;
 	status = "okay";
@@ -82,6 +82,20 @@
 
 &usart2 {
 	pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
+	pinctrl-names = "default";
+	current-speed = <115200>;
+	status = "okay";
+};
+
+&usart3 {
+	pinctrl-0 = <&usart3_tx_pb8 &usart3_rx_pb9>;
+	pinctrl-names = "default";
+	current-speed = <420000>;
+	status = "okay";
+};
+
+&usart4 {
+	pinctrl-0 = <&usart4_tx_pa0 &usart4_rx_pa1>;
 	pinctrl-names = "default";
 	current-speed = <115200>;
 	status = "okay";
@@ -122,22 +136,22 @@
 	clock-frequency = <I2C_BITRATE_FAST>;
 };
 
-&spi1 {
-	pinctrl-0 = <&spi1_nss_pb0 &spi1_sck_pa5
-		     &spi1_miso_pa6 &spi1_mosi_pa7>;
-	pinctrl-names = "default";
-	status = "okay";
-};
+// &spi1 {
+// 	pinctrl-0 = <&spi1_nss_pb0 &spi1_sck_pa5
+// 		     &spi1_miso_pa6 &spi1_mosi_pa7>;
+// 	pinctrl-names = "default";
+// 	status = "okay";
+// };
 
-&spi2 {
-	pinctrl-0 = <&spi2_nss_pb12 &spi2_sck_pb13
-		     &spi2_miso_pb14 &spi2_mosi_pb15>;
-	pinctrl-names = "default";
-	status = "okay";
-};
+// &spi2 {
+// 	pinctrl-0 = <&spi2_nss_pb12 &spi2_sck_pb13
+// 		     &spi2_miso_pb14 &spi2_mosi_pb15>;
+// 	pinctrl-names = "default";
+// 	status = "okay";
+// };
 
 &adc1 {
-	pinctrl-0 = <&adc1_in0_pa0 &adc1_in1_pa1>;
+	pinctrl-0 = <&adc1_in5_pa5 &adc1_in10_pb2>;
 	pinctrl-names = "default";
 	st,adc-clock-source = <SYNC>;
 	st,adc-prescaler = <4>;
