Ой, попередній коміт не все додав.

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,3 +31,5 @@ build_flags =
 
 # Я не впевнен шо для коректної роботи Half-duplex, потрібно включати ENABLE_HWSERIAL4
 # Можливо треба вручну зробити це у програмі
+lib_deps = 
+    AlfredoCRSF@^1.0.0
