Змінені звукові сигнали. Збільшен буфер RX UART.

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,8 @@ build_flags =
     ; Disable Serial for debug
     -DNDEBUG
     -DHWSERIAL_NONE
+    ; Increase UART buffer size
+    -DSERIAL_RX_BUFFER_SIZE=256
 
 # Я не впевнен шо для коректної роботи Half-duplex, потрібно включати ENABLE_HWSERIAL4
 # Можливо треба вручну зробити це у програмі
