--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,8 @@ board_build.mcu = stm32g070kbt6
 
 upload_protocol = stlink
 
+extra_scripts = post:extra_script.py
+
 build_flags =
     ; DEBUG PORT (UART2)
     -DENABLE_HWSERIAL2
